--- a/src/cli/ui/web.html
+++ b/src/cli/ui/web.html
@@ -11,20 +11,33 @@
             margin-top: 50px;
         }
 
-        button {
-            padding: 10px 20px;
-            font-size: 1em;
-            margin: 5px;
+        .tool-call-block {
+            min-width: 150px;
+            max-width: 150px;
+            height: 150px;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin-left: 5px;
+            background: #f8f8f8;
+            word-break: break-word;
+            overflow: hidden;
         }
     </style>
 </head>
 
 <body>
     <div>
+        <h1>[nerve]@<span id="generator">{GENERATOR}</span> | <span id="task_name">{TASK_NAME}</span></h1>
+        <div id="evaluation" style="display: none; padding: 10px; border-radius: 5px; background-color: #f0f0f0;">
+            <h2 id="evaluation_title">EVALUATION</h2>
+            <p id="evaluation_feedback"></p>
+        </div>
 
-        <strong>socket</strong>: <span id="status">Connecting...</span>
-        <br />
-        <strong>status</strong>: <span id="control_state"></span>
+        <small>
+            websocket=<span id="status">connecting...</span> | agent=<span id="control_state"></span> |
+            input_tokens=<span id="input_tokens"></span> | output_tokens=<span id="output_tokens"></span>
+        </small>
         <br />
 
         <button onclick="sendCommand('play')">Play</button>
@@ -33,23 +46,25 @@
     </div>
     <hr />
 
-    <div>
-        <h3>Prompt</h3>
-        <p>
-        <pre id="prompt" style="white-space: pre-wrap; word-break: break-word; font-size: small;"></pre>
-        </p>
-    </div>
-    <div>
-        <p id="storages"></p>
-    </div>
-    <div>
-        <h3>Actions</h3>
-        <p id="tool_calls"></p>
+    <div style="display: flex;">
+        <div style="flex: 1;">
+            <h3>Prompt</h3>
+            <p>
+            <pre id="prompt" style="white-space: pre-wrap; word-break: break-word; font-size: small;"></pre>
+            </p>
+        </div>
+        <div style="flex: 1;">
+            <p id="storages"></p>
+        </div>
     </div>
 
-    <hr />
+    <div>
+        <h3>Steps</h3>
+        <div id="tool_calls" style="display: flex; overflow-x: scroll; gap: 10px; font-size: small;">
 
-    <pre id="events"></pre>
+        </div>
+    </div>
+
 
     <script>
         var storages = {};
@@ -57,16 +72,20 @@
 
         const statusElement = document.getElementById('status');
         const controlStateElement = document.getElementById('control_state');
-
-        const eventsElement = document.getElementById('events');
         const promptElement = document.getElementById('prompt');
         const storagesElement = document.getElementById('storages');
         const toolCallsElement = document.getElementById('tool_calls');
-        // const systemPromptElement = document.getElementById('system_prompt');
+        const taskNameElement = document.getElementById('task_name');
+        const evaluationElement = document.getElementById('evaluation');
+        const evaluationFeedbackElement = document.getElementById('evaluation_feedback');
+        const evaluationTitleElement = document.getElementById('evaluation_title');
+        const inputTokensElement = document.getElementById('input_tokens');
+        const outputTokensElement = document.getElementById('output_tokens');
+
         const ws = new WebSocket('ws://{WEBSOCKET_SERVER_ADDRESS}');
 
         ws.onopen = () => {
-            statusElement.textContent = 'Connected';
+            statusElement.textContent = 'connected';
         };
 
         ws.onmessage = (event) => {
@@ -85,14 +104,23 @@
                 onBeforeToolCall(message);
             } else if (message.type === 'after_tool_call') {
                 onAfterToolCall(message);
+            } else if (message.type === 'task_started') {
+                taskNameElement.textContent = message.data.name;
+            } else if (message.type === 'text_response') {
+                onTextResponse(message);
+            } else if (message.type === 'evaluation') {
+                onEvaluation(message);
+            } else if (message.type === 'task_complete') {
+                onTaskComplete(message);
+            } else if (message.type === 'metrics_update') {
+                onMetricsUpdate(message);
             }
 
-            eventsElement.textContent += event.data + "\n\n";
-            eventsElement.scrollTop = eventsElement.scrollHeight;
+            console.log(event.data);
         };
 
         ws.onclose = () => {
-            statusElement.textContent = 'Disconnected';
+            statusElement.textContent = 'disconnected';
         };
 
         function sendCommand(command) {
@@ -102,7 +130,6 @@
 
         function onStateUpdate(message) {
             promptElement.textContent = message.data.chat.prompt;
-            // systemPromptElement.textContent = message.data.chat.system_prompt;
         }
 
         function onStorageUpdate(message) {
@@ -121,10 +148,11 @@
             let html = '';
 
             for (const toolCall of toolCalls) {
-                html += `${toolCall}<br/><br/>`;
+                html += `<div class="tool-call-block">${toolCall}</div>`;
             }
 
             toolCallsElement.innerHTML = html;
+            toolCallsElement.scrollLeft = toolCallsElement.scrollWidth;
         }
 
         function onBeforeToolCall(message) {
@@ -134,7 +162,13 @@
                 args = "";
             }
 
-            let toolCall = `<strong>${message.data.tool_call.tool_name}</strong> ${args} ...`;
+            let toolCall = '';
+            if (message.data.tool_call.tool_name) {
+                toolCall = `<strong>${message.data.tool_call.tool_name}</strong> ${args} ...`;
+            } else {
+                toolCall = `<strong>🧠</strong> ${args} ...`;
+            }
+
             toolCalls.push(toolCall);
 
             renderToolCalls();
@@ -142,17 +176,88 @@
 
         function onAfterToolCall(message) {
             // this will be reflected in the storages anyway
-            let args = `<code>${message.data.tool_call.argument}</code>`;
+            let args = "";
+            if (message.data.tool_call.argument) {
+                args = `<code>${message.data.tool_call.argument}</code>`;
+            }
             if (message.data.tool_call.tool_name == 'think') {
                 args = "";
             }
 
-            let toolCall = `<strong>${message.data.tool_call.tool_name}</strong> ${args}`;
+            let toolCall = '';
+            if (message.data.tool_call.tool_name) {
+                toolCall = `🛠️ <strong>${message.data.tool_call.tool_name}</strong> ${args} ...`;
+            } else {
+                toolCall = `<strong>🧠</strong> ${args} ...`;
+            }
+
+            if (message.data.tool_call.argument) {
+                toolCall = `<div onclick="alert('${message.data.tool_call.argument}')">${toolCall}</div>`;
+            }
 
             toolCalls.pop();
             toolCalls.push(toolCall);
 
+            if (message.data.result.Image) {
+                toolCall = `<img style="width: 250px;" src="data:${message.data.result.Image.mime_type};base64,${message.data.result.Image.data}" />`;
+                toolCalls.push(toolCall);
+            } /*else if (message.data.result.Text) {
+                toolCalls.push(`<code class="text-result">${message.data.result.Text}</code>`);
+            }*/
+
             renderToolCalls();
+        }
+
+        function onTextResponse(message) {
+            toolCalls.push(`<small><em>🧠 ${message.data}</em></small>`);
+            renderToolCalls();
+        }
+
+        function onMetricsUpdate(message) {
+            inputTokensElement.textContent = message.data.usage.total_input_tokens;
+            outputTokensElement.textContent = message.data.usage.total_output_tokens;
+        }
+
+        function blinkOnce(element) {
+            element.style.opacity = '1';
+            setTimeout(() => {
+                element.style.opacity = '0';
+                setTimeout(() => {
+                    element.style.opacity = '1';
+                }, 500);
+            }, 500);
+        }
+
+
+        function onEvaluation(message) {
+            evaluationElement.style.display = 'block';
+            evaluationFeedbackElement.textContent = message.data.feedback;
+
+            if (message.data.completed) {
+                evaluationElement.style.color = 'green';
+                evaluationElement.style.backgroundColor = 'lightgreen';
+            } else {
+                evaluationElement.style.color = 'red';
+                evaluationElement.style.backgroundColor = 'lightcoral';
+            }
+
+            blinkOnce(evaluationElement);
+        }
+
+        function onTaskComplete(message) {
+            evaluationElement.style.display = 'block';
+            evaluationTitleElement.textContent = 'TASK COMPLETE';
+            evaluationFeedbackElement.textContent = message.data.reason;
+
+            if (!message.data.impossible) {
+                evaluationElement.style.color = 'green';
+                evaluationElement.style.backgroundColor = 'lightgreen';
+            } else {
+                evaluationElement.style.color = 'red';
+                evaluationElement.style.backgroundColor = 'lightcoral';
+            }
+
+            blinkOnce(evaluationElement);
         }
     </script>
 </body>
